Plantation Audit Screen, Geo Boundaries for Pre Proespective plots, Total Palm Area changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.oilpalm3f.cropapp"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 146
-        versionName "1.3.146"
+        versionCode 150
+        versionName "1.3.150"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         useLibrary 'org.apache.http.legacy'
@@ -101,9 +101,17 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2. 2', {
+//    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2. 2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+
+//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
 
 
     implementation files('libs/AnalogicsVersa3TBTPrinterAPI.jar')
