--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,5 +163,8 @@ dependencies {
     implementation 'commons-io:commons-io:2.4'
     implementation 'com.tom-roush:pdfbox-android:2.0.8.0'
     implementation group: 'org.apache', name: 'pdfbox-android', version: '1.8.9.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.1.6'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
 }
