Palm Area Changes(Do & Close CM Visits & Harvesting Visits, Not Visited Plots). CM Visits duplicates issue changes and pre-populating data. Alerts Removed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,8 @@
         <activity
             android:name=".areaextension.location.LocationSelectionScreen"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".ui.HomeScreen"/>
         <activity
             android:name=".cropmaintenance.CropMaintenanceHomeScreen"
             android:screenOrientation="portrait"
